--- a/src/main.css
+++ b/src/main.css
@@ -18,14 +18,17 @@
 
 #projects {
     display: flex;
+    width: 100%;
     flex-direction: column;
+    align-items: center;
+    margin-right: 85px;
 }
 
 #newProjectForm {
     display: flex;
-    width: 500px;
+    width: 100%;
     justify-content: center;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .form {
