--- a/src/main.css
+++ b/src/main.css
@@ -16,12 +16,20 @@
     margin-right: 10px;
 }
 
+#sidebar button {
+    border: solid blue 1px;
+}
+
 #projects {
     display: flex;
     width: 100%;
     flex-direction: column;
     align-items: center;
-    margin-right: 85px;
+    margin-right: 80px;
+}
+
+#projects button {
+    border: solid red 1px;
 }
 
 #newProjectForm {
@@ -33,14 +41,18 @@
 
 .projectContainer {
     display: flex;
-    justify-content: space-between;
+    width: 40%;
+    margin-left: 30px;
 }
 
 .checkbox {
-    width:12px;
-    height:15px;
+    width:20px;
+    height:20px;
     text-align: center;
+    margin-right: 20px;
+    margin-top: 25px;
     background-color: yellow;
+    border: solid black 1px;
 }
 
 .form {
@@ -88,7 +100,8 @@ color: black;
 .project {
     border: solid grey 1px;
     padding: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
+
 }
 
 li {
